# 3d-ddf

./: .coveragerc  .cursorignore  .editorconfig  .env.example  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  ANIMATION_INFO.md  BACKLOG.md  EXPLOSIONS_ANIMATION.md  Jenkinsfile  Makefile  PHOTOREALISTIC_FIX.md  QUICKSTART.md  README.md  RELEASE.md  RENDER_INFO.md  RENDER_SERVICE_CONSOLIDATION.md  REORGANIZATION_SUMMARY.md  ROADMAP.md  TEST_RESULTS.md  cookies.txt  create-job.groovy  freestyle-job-config.xml  install-hooks.sh  jenkins-job-config.xml  pytest.ini  requirements.txt  setup_venv.sh  simple-job-config.xml  temp_run_tests_unittest.py  test_api.py
.cursor/: mcp.json
.githooks/: pre-push
blender-mcp/: addon.py
docker/: Dockerfile  Dockerfile.webhook  docker-compose.jenkins.yml  jenkins-controller.Dockerfile  jenkins-pipeline-config.xml
docs/: README.md
integrations/: .env.backup  README.md  env.complete  env.comprehensive  env.final  env.template  requirements.txt  setup_complete.py  setup_comprehensive.py  setup_environment.py  setup_final.py  setup_final_comprehensive.py
logs/: commit_confirmation.txt  explosion_tests_result.txt  full_suite_sample_result.txt  git_status_pre_commit.txt  hardcoded_paths_scan.txt  integration_tests_result.txt  logo_service_commit_confirmation.txt  logo_service_path_scan.txt  logo_service_tests.txt  logo_service_tests_discovered.txt  logo_service_unit_tests.txt  path_replacement_diff.txt  path_validation_recheck.txt  test_results.txt
projects/: BLEND_FILE_ORGANIZATION.md
renders/: AGENTS.md  README.md
reports/: .gitkeep
scripts/: __init__.py  _temp_dadosfera_render.py  _temp_explosion-test_render.py  add_metallic_materials.py  adjust_explosion_lighting.py  analyze_current_explosions.py  analyze_explosion_realism.py  check_explosion_objects.py  check_jenkins_status.sh  check_render_progress.sh  clean_production_scene.py  cleanup_active_summaries.py  create_baseline_scenes.py  create_enhanced_dadosfera_atomic.py  create_explosion_test_scene.py  create_explosion_video.py  create_improved_explosions.py  create_improved_realistic_explosions.py  create_particle_explosions.py  create_realistic_explosions.py  create_realistic_mantaflow_explosion.py  create_realistic_particle_explosion.py  create_simple_realistic_explosion.py  detect_blender.py  encode_frames_to_video.sh  execute_baseline_creation.py  fix_explosion_realism.py  fix_export_names.sh  generate_report.py  integrate_text_with_explosions.py  migrate_all_timestamps.py  migrate_export_file_names.py  migrate_render_folder_names.py  monitor_render.sh  optimize_explosion_materials.py  organize_and_fresh_start.py  pre_render_validation.py  render.sh  (+26 more)
services/logo-to-3d/: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
services/logo-to-3d/output/: text_3d_dadosfera.mtl
services/logo-to-3d/scripts/: demo_text_to_3d.py  poc_text_to_3d.py  text_to_3d_poc.py
services/logo-to-3d/src/api/: __init__.py  main.py
services/logo-to-3d/src/api/routes/: assets.py  image.py  jobs.py  text.py
services/logo-to-3d/src/core/: __init__.py  blender_server.py  config.py  exceptions.py  logging.py  utils.py
services/logo-to-3d/src/text_processor/: __init__.py  font_manager.py  renderer.py
services/logo-to-3d/tests/e2e/: test_text_to_3d_pipeline.py
services/logo-to-3d/tests/integration/: test_text_processing.py
services/logo-to-3d/tests/unit/: test_font_manager.py  test_text_renderer.py
(+346 files in other folders)
